--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
-cmake_minimum_required(VERSION 3.0.0)
+cmake_minimum_required(VERSION 3.22.0)
 project(threads_edu)
 
-add_executable(threads_edu main.cpp)
+add_subdirectory(fork_exec)
+add_subdirectory(daemon)
