add async example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(fork_exec)
 add_subdirectory(daemon)
 add_subdirectory(pthreads_example)
 add_subdirectory(std_thread)
+add_subdirectory(async)
