add producer-consumer example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(daemon)
 add_subdirectory(pthreads_example)
 add_subdirectory(std_thread)
 add_subdirectory(async)
+add_subdirectory(producer_consumer)
